force-app/main/default/objects/cdcpc__RD_Output_OA__c/cdcpc__RD_Output_OA__c.object-meta.xml
<CustomObject>
    <label>RD Output OA</label>
    <nameField>
        <label>RD Output OA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Output OA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>