force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__addIntegralBDI__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__addIntegralBDI__c</fullName>
    <label>addIntegralBDI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>