force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__COIN__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__COIN__c</fullName>
    <label>COIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>