force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__CSSUM__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CSSUM__c</fullName>
    <label>CSSUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>