force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__DSCVAR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DSCVAR__c</fullName>
    <label>DSCVAR</label>
    <length>5</length>
    <type>Text</type>
</CustomField>