force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__HCLASS__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HCLASS__c</fullName>
    <label>HCLASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>