force-app/main/default/objects/cdcpc__RD_Output_OA__c/fields/cdcpc__OA__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OA__c</fullName>
    <label>OA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>