force-app/main/default/objects/cdcpc__RD_Output_OA__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__HCLASS__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__CSSUM__c</columns>
    <columns>cdcpc__DPM__c</columns>
    <columns>cdcpc__COIN__c</columns>
    <columns>cdcpc__COOUT__c</columns>
    <columns>cdcpc__LABDSC__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>cdcpc__OA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>